--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
                         <figcaption>My GitHub</figcaption>  
                     </figure>
                 </footer>
-                <script async src="script.js"></script>
+                <script src="script.js"></script>
             </body>
         </html>
