--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <footer>
       <figure>
         <a href="https://github.com/SerafimPoch">
-          <img src="../img/cat.jpg" alt="GitHub cat" />
+          <img src="./img/cat.jpg" alt="GitHub cat" />
         </a>
         <figcaption>My GitHub</figcaption>
       </figure>
